--- a/index.html
+++ b/index.html
@@ -39,5 +39,18 @@
     </style>
   </head>
   <body>
+    <div class="container">
+      <div class="row navigation">
+	<div class="span2 logo">
+	  Logo
+	</div>
+	<div class="span6 blank">
+	  Blank
+        </div>
+	<div class="span4 about">
+	  About
+        </div>
+      </div>
+    </div>
   </body>
 </html>
