--- a/index.html
+++ b/index.html
@@ -46,35 +46,22 @@
       line-height: 24px;
       }
 
-      body {
-      padding-top: 20px;
-      padding-bottom: 40px;
+      /* Video pitch and action */
+      .pitch {
+      padding: 2.5% 0%;
       }
-      .container {
-      width: 960px;
+      .order {
+      padding: 2% 0%;
       }
-      p.lead {
-      padding-top:15px;
+      .actions {
+      background-color: #343434;
+      padding: 3% 0%;
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-      padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-      border: 1px dotted;
+      .video, .thermometer, .order, .social, .statistics {
       text-align: center;
       }
-      .video {
-      /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-      height: 124px;
-      line-height: 124px;
-      }
-      .thermometer, .order, .social {
-      /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-      height: 40px;
-      line-height: 40px;
-      }
-      div.row {
-      border: 1px solid;
+      .statistics h3, .statistics p {
+      color: white;
       }
     </style>
   </head>
@@ -122,30 +109,14 @@
 	  <p class="lead">One sentence description.</p>
 	</div>
       </div>
+      <div class="row-fluid pitch">
+	<div class="span5 offset1 video">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+      </div>
     </div>
 
     <div class="container">
-      <div class="row navigation">
-	<div class="span2 logo">
-	  Logo
-	</div>
-	<div class="span6 blank">
-	  Blank
-        </div>
-	<div class="span4 about">
-	  About
-        </div>
-      </div>
-      <div class="row heading">
-        <div class="span12">
-          <h1>Bitstarter Title</h1>
-        </div>
-      </div>
-      <div class="row subheading">
-        <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
-        </div>
-      </div>
       <div class="row pitch">
         <div class="span6 video">
           Video
