--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
       .statistics h3, .statistics p {
       color: white;
       }
+
+      /* Marketing Copy and Footer */
+      .copy {
+      padding-top: 2.5%;
+      padding-bottom: 2.5%;
+      text-align: justify;
+      }
+      .asset {
+      padding: 2.5% 0%;
+      }
     </style>
   </head>
   <body>
@@ -173,6 +183,33 @@
 	  </div>
 	</div>
       </div>
+
+      <!-- Beyond this part the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <!-- http://placehold.it -->
+      <div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+	<div class="span5 copy">
+	  <p>
+	    Lorem ipsum...
+	  </p>
+	</div>
+      </div>
+
+      <div class="row-fluid section2">
+	<div class="span5 offset1 copy copy-right">
+	  <p>
+	    Lorem ipsum...
+	  </p>
+	</div>
+	<div class="span5 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+      </div>
+
     </div>
   </body>
 </html>
