--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
       .asset {
       padding: 2.5% 0%;
       }
+      .footer {
+      color: #cccccc;
+      text-align: center;
+      }
+      .footer p {
+      font-size: 11px;
+      }
+      .footer a {
+      color: #ccccff;
+      }
     </style>
   </head>
   <body>
@@ -246,6 +256,19 @@
 	      </div>
 	    </div>
 	  </div>
+	</div>
+      </div>
+
+      <!-- CC By-SA 3.0 license -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+	<div class="span12">
+	  <p>This work is licensed under
+	    the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+	      By-SA 3.0
+	      </a>, without all the cruft that would otherwise be
+	    put at the bottom of the page.
+	  </p>
 	</div>
       </div>
 
