--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Graphene Carnival Mask</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">Carnival mask manufactured from the new super material graphene.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
@@ -159,17 +159,17 @@
 		  different in horizontal and vertical layouts, illustrating
 		  media queries.-->
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>1520</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$60000</h3> <p>of $150,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>30</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -202,11 +202,13 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
+	  <img class="img-polaroid" src="http://i.imgur.com/9FYmC19.jpg">
 	</div>
 	<div class="span5 copy">
 	  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
+Graphene is an allotrope of carbon. In this material, carbon atoms are arranged in a regular hexagonal pattern. Graphene can be described as a one-atom thick layer of the mineral graphite (many layers of graphene stacked together effectively form crystalline flake graphite). Among its other well-publicised superlative properties, it is very light, with a 1-square-meter sheet weighing only 0.77 milligrams.
+A definition of "isolated or free-standing graphene" has also recently been proposed: "graphene is a single atomic plane of graphite, which is sufficiently isolated from its environment to be considered free-standing".
 	  </p>
 	</div>
       </div>
@@ -214,11 +216,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagitt
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
+Carnival is traditionally held in areas with a large Catholic and, to a lesser extent, Eastern Orthodox makeup. Protestant areas usually do not have Carnival celebrations or have modified traditions, such as the Danish Carnival or other Shrove Tuesday events. Conversely, the Philippines, a predominantly Roman Catholic country, does not have Carnival celebrations as they are more culturally influenced by neighboring Asian nations, which do not have Carnival celebrations.
 	  </p>
 	</div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
+	  <img class="img-polaroid" src="http://i.imgur.com/8Kds7aO.jpg">
 	</div>
       </div>
 
@@ -233,12 +236,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagitt
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  What is graphene?
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Questions.
+		  Graphene can be described as a one-atom thick layer of the mineral graphite.
 		</div>
 	      </div>
 	    </div>
@@ -246,12 +249,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagitt
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseTwo">
-		  What's a Frequently Asked Question?
+		  What's a carnival?
 		</a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  Carnival is a festive season which occurs immediately before Lent.
 		</div>
 	      </div>
 	    </div>
