--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://d396quszo40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css"> -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css">
     <!-- <link type="text/css" rel="stylesheet"
 	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"> -->
@@ -147,19 +147,20 @@
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 	</div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
 	<div class="span5 actions">
+	  <div class="row-fluid">
 	  <div class="span8 offset2">
-	    <div class="statistics">
+	    <div class="row-fluid statistics">
 	      <div class="span4">
 		<!-- linediv-l and linediv-r give dividing lines that look
 		  different in horizontal and vertical layouts, illustrating
 		  media queries.-->
 		<div class="linediv-l">
-		  <h3>1520</h3> <p>backers</p>
+		  <h3>1000</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
@@ -174,6 +175,7 @@
 	      </div>
 	    </div>
 	  </div>
+	  <div class="row-fluid">
 	  <div class="span10 offset1">
 	    <!-- Bootstrap progress bar -->
 	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -182,17 +184,23 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
 	  </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
 	    <!-- Standard Bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
 	    <button class="btn btn-success btn-large">Preorder</button>
 	  </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <!-- Social buttons are not included in default Bootstrap -->
 	    <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	  </div>
+	  </div>
+	</div>
 	</div>
       </div>
 
@@ -203,7 +211,7 @@
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
 	  <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
-	  <img class="img-polaroid" src="http://i.imgur.com/9FYmC19.jpg">
+	  <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/9FYmC19.jpg">
 	</div>
 	<div class="span5 copy">
 	  <p>
@@ -221,7 +229,7 @@ Carnival is traditionally held in areas with a large Catholic and, to a lesser e
 	</div>
 	<div class="span5 asset">
 	  <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
-	  <img class="img-polaroid" src="http://i.imgur.com/8Kds7aO.jpg">
+	  <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/8Kds7aO.jpg">
 	</div>
       </div>
 
