--- a/index.html
+++ b/index.html
@@ -201,9 +201,16 @@
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
+	    <a class="coinbase-button" 
+	       data-button-style="custom_large"
+	       data-button-text="Preorder with Bitcoin"
+	       data-code="c7c2294f4d4c2cd3c63991996fd29ed2" 
+	       href="https://coinbase.com/checkouts/c7c2294f4d4c2cd3c63991996fd29ed2">
+	      Preorder With Bitcoin</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	    <!-- Standard Bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <!-- <button class="btn btn-success btn-large">Preorder</button> -->
 	  </div>
 	  <div class="span8 offset2 social">
 	    <!-- AddThis Button BEGIN -->
